--- a/style.css
+++ b/style.css
@@ -55,7 +55,11 @@ a {
     margin: 5px auto;
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
-    background-color: #101010;
+    background-color: #fff;
+}
+.hamburger .bar:nth-child(2) {
+    width: 15px;
+    margin-left: 9.5px;
 }
 .nav-menu {
     display: flex;
@@ -120,4 +124,55 @@ a {
 }
 .last-part p{
     font-size: 15px;
+}
+
+/* starting media quires */
+@media only screen and (max-width: 960px) {
+    /* navbar */
+    .nav-menu {
+        position: fixed;
+        left: -100%;
+        top: 13rem;
+        flex-direction: column;
+        background-color: #e3eaf4;
+        width: 100%;
+        border-radius: 10px;
+        text-align: center;
+        transition: 0.3s;
+    }
+    ul li a{
+        color: #000;
+    }
+    .nav-menu.active {
+        left: 0;
+    }
+    .nav-item {
+        margin: 2.5rem 0;
+    }
+    .hamburger {
+        display: block;
+        cursor: pointer;
+        background: #00f481;
+        padding: 1em 2em;
+        border-radius: 8px;
+        align-items: left;
+    }
+    .hamburger.active .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .hamburger.active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .hamburger.active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
+        /* main */
+    .main{
+        display: flex;
+        flex-direction: column-reverse;
+        text-align: center;
+    }
+
 }
